Artist changes, fix discover on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -725,3 +725,10 @@ tbody > tr {
 .sync-info {
   margin-bottom: 6px;
 }
+
+.unfollowClose {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  color: white;
+}
